# AgentShield

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
agentshield/: __init__.py
agentshield/core/: __init__.py  adapter.py  config.py  middleware.py  shield.py  types.py
agentshield/defense/: __init__.py  boundary.py  middlewares.py  output_filter.py  prompt_guard.py  rag_shield.py
agentshield/domains/: __init__.py  finance.py  healthcare.py  legal.py
agentshield/red_team/: __init__.py  attack_library.py  simulator.py
agentshield/tests/: test_adapters.py  test_boundary.py  test_features.py  test_middleware.py  test_output_filter.py  test_prompt_guard.py  test_rag_shield.py  test_simulator.py
examples/: INTEGRATION_GUIDE.md  crewai_multiagent.py  langgraph_multiagent.py
