[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentshield"
version = "0.1.0"
description = "A standalone, pip-installable security framework for multi-agent AI systems."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]
crewai = ["crewai>=0.51"]
langchain = ["langchain>=0.2"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["agentshield*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["agentshield/tests"]
